# c2-discord-server

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
